centrifugo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centrifugo
  namespace: esb
spec:
  selector:
    app: centrifugo
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
