centrifugo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: centrifugo-ingress
  namespace: esb
spec:
  ingressClassName: caddy
  tls:
    - hosts:
        - ws.easybulk.intra
      secretName: mycerts-caddy
  rules:
    - host: ws.easybulk.intra
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: centrifugo
                port:
                  number: 8000
